2008-08-21  Sam Steingold  <sds@gnu.org>

	* modules/dbus/dbus.lisp (DBusMessageIter): c-struct, not c-pointer

2008-08-21  Sam Steingold  <sds@gnu.org>

	* foreign.d (foreign_with_pointers_p): support inttypes (return false)

2008-08-20  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (I_to_ulong, I_to_slong): define regardless of
	HAVE_FFI for the sake of the syscalls module
	* modules/syscalls/calls.c (%SETHOSTID): sethostid does not return
	a value on *BSD, use errno to check for errors
	Reported by José H. Espinosa <jose.h.espinosa@gmail.com>

2008-08-20  Sam Steingold  <sds@gnu.org>

	* modules/dbus/configure.in (dbus_int64_t, dbus_int32_t, dbus_uint32_t)
	(dbus_int16_t, dbus_unichar_t, dbus_bool_t): check types
	* modules/dbus/dbus.lisp (def-c-const): import from EXPORTING;
	pass DBusError by reference using (c-pointer DBusError) instead of
	returning a fresh object using (error (c-ptr DBusError) :in-out) et al;
	(DBusMessageIter): add def-c-type

2008-08-20  Sam Steingold  <sds@gnu.org>

	* makemake.in (check-script): use ${TRCRLF} to delete '\r' from
	output in addition to replacing '\n' with '_' to fix woe32

2008-08-18  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c: make sure that end_system_call() is
	called before all errors and that
	errno is only accessed inside begin_system_call/end_system_call

2008-08-17  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (path_truncate, stream_truncate): call
	end_system_call(); before signaling errors
	(I_to_file_offset, FILE-SIZE) [WIN32_NATIVE]: use LARGE_INTEGER.QuadPart
	(stream_truncate) [WIN32_NATIVE]: fix LARGE_INTEGER literal

2008-08-15  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (path_truncate, stream_truncate, FILE-SIZE):
	handle WIN32_NATIVE before HAVE_TRUNCATE & HAVE_FTRUNCATE because
	WIN32_NATIVE has a broken ftruncate (similar to fstat: accept some
	unknown int instead of a handle)
	(I_to_offset, STREAM-LOCK, %SETHOSTID): check arg type before conversion